openshift/kibana-openshift.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elk
  labels:
    app: kibana
spec:
  ports:
    - port: 5601
      targetPort: 5601
      protocol: TCP
  selector:
    app: kibana
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kibana
  namespace: elk
spec:
  to:
    kind: Service
    name: kibana
  port:
    targetPort: 5601
  tls:
    termination: edge
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: kibana
  namespace: elk
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    app: kibana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: quay.io/redhatcloud/access-registry-elk-kibana:8.12.1
        ports:
        - containerPort: 5601
        volumeMounts:
        - name: kibana-configmap
          mountPath: /usr/share/kibana/config/kibana.yml
          subPath: kibana.yml
        - name: cacert
          mountPath: /usr/share/kibana/config/cacert
          subPath: cacert
      volumes:
      - name: kibana-configmap
        configMap:
          name: kibana-configmap
          items:
          - key: kibana.yml
            path: kibana.yml
      - name: cacert
        configMap:
          name: kibana-configmap
          items:
          - key: cacert
            path: cacert
